# bing-wallpaper-cpp

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
